# uws-london-rag-bot

./: .env.example  .gitignore  CONTRIBUTORS.md  Dockerfile  README.md  README_QUICK_START.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: backup.sh
